Fixed styles: z-index and height

--- a/src/components/styles/InputField.scss
+++ b/src/components/styles/InputField.scss
@@ -6,7 +6,7 @@
 .neodatepicker-input {
    display: grid;
    width: 170px;
-   height: 30px;
+   height: 32px;
    border-radius: 5px;
    transition: all .3s;
    align-items: center;
